test/functions/intents/out/split-init-out-no-type-error-use.good
split-init-out-no-type-error-use.chpl:8: In function 'main':
split-init-out-no-type-error-use.chpl:9: error: variable 'x' is not initialized and has no type
split-init-out-no-type-error-use.chpl:10: note: 'x' use here prevents split-init from establishing the type
